--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -28,7 +28,7 @@ body
 }
 .parallax-windowz {
     position : relative;
-    float : left;
+    float : left;
     min-height: 100%;
     height : 100%;
     background: transparent;
@@ -218,8 +218,9 @@ body
 }
 
 .content-menu-links{
-  float : right;
-  margin-top : 16px;  margin-right : 10%;
+  float : right;
+  margin-top : 16px;
+  margin-right : 10%;
   text-align : right;
 }
 
@@ -332,19 +333,19 @@ font-size : 18px;
   text-align : center;
 }
 
-.contact-name{position : relative;
+.contact-name{position : relative;
   font-weight : 600;
   font-size : 120%;
 
 }
 .marketingPhone{
-  margin-left : 0px;
+  margin-left : 0px;
   list-style : none;
 }
 
 .contact-profile-picture img{position : relative;
   margin-bottom : 15px;
-  width : 90%;
+  width : 90%;
   border-radius : 100%;
 }
 .contact-form input:focus{
@@ -404,7 +405,8 @@ font-size : 18px;
   width : 30%;
   outline: 0;
   border-color : #000;
-  border-radius : 8px;background-image: none;
+  border-radius : 8px;
+background-image: none;
   -webkit-box-shadow: none;
   box-shadow : none;
           box-shadow: none;
@@ -449,7 +451,6 @@ font-size : 18px;
   position : relative;
   display : block;
   float : left;
-      margin-top : 45%;
     min-height : 45%;
   width : 100%;
   background-color : transparent;
@@ -471,7 +472,8 @@ font-size : 18px;
   padding-top : 22px;
   width : 100%;
   background-color : rgba (255,255,255, 0.4);
-color : white;vertical-align: 100%;  vertical-align: top;
+color : white;vertical-align: 100%;
+  vertical-align: top;
   letter-spacing : 10px;
   font-weight : 400;
   font-size : 240%;
@@ -500,7 +502,8 @@ text-align:left;
     width: 0%;
     height: 2px;
     background-color: white;
-    content: '';    text-align:right;
+    content: '';
+    text-align:right;
     transition: all 0.2s ease-out;
 }
 
