--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -22,9 +22,14 @@ body
     background-size: cover;
 }
 .parallax-window {
-    min-height: 100%;
+    min-width: 100%;
     height : 100%;
     background: transparent;
+}
+.parallax-window-image {
+    position : relative;
+    width: 100%;
+    height : 100%;
 }
 .parallax-windowz {
     position : relative;
