--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -17,7 +17,19 @@
         width: 220px !important;
         background-size: 220px !important;
     }
+    
+}
 
+@media screen and (max-width: 1200px) 
+{
+    .imageContainer{
+      padding-top:10em;
+    } 
+    
+    .content-menu-links
+    {
+        right:0;
+    }
 }
 
 html
@@ -29,6 +41,7 @@ html
 html,
 body
 {
+    height: 100%;
     height: 100%;
     background-color: transparent;
 }
@@ -82,18 +95,20 @@ body
 .wi-navigation-center{
   width : 100%;
   text-align : center;
-
+  padding-left:0;
+  padding-top:3em;
+  overflow:hidden;
   flex-wrap: wrap ;
   justify-content: space-around;
 }
 
 .wi-navigation-center a li{
     padding-top : 24px;
-        padding-bottom : 24px;
+    padding-bottom : 24px;
     width : 100%;
     color : black;
-    list-style : none;    font-size : 2em;
-
+    list-style : none;    
+    font-size : 2em;
 }
 
 
@@ -646,7 +661,7 @@ width: 100%;
   z-index : 10000;
   width : 100%;
   height: 100%;background-color: rgba(255,255,255,0.8);
-color : black;
+    color : black;
 }
 
 @media screen and (max-width: 720px) {
