Smooth Scrolling and Stuff

--- a/assets/css/beta.css
+++ b/assets/css/beta.css
@@ -25,10 +25,16 @@
 }
 
 
-.smallImage{
+.ImagePack{
+  overflow : hidden;
+  margin-bottom : 30px;
+  width : 100%;
+  text-align : right;
+  transition : all 0.3s ease-in;
+
 }
 
-.ImagePack{
+.ImagePackOne{
   overflow : hidden;
   margin-bottom : 30px;
   width : 100%;
