--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -59,6 +59,11 @@
         margin-bottom:36px;
         margin-top:-10px;
     }
+    
+    .contact-us
+    {
+        margin-top:5em;
+    }
 }
 
 @media screen and (max-width: 720px) and (min-width: 430px)
@@ -112,6 +117,19 @@
     {
         height:280px !important;
         overflow:auto;
+    }
+    
+    .contact-us
+    {
+        margin-top:5em;
+    }
+}
+
+@media screen and (min-width: 1200px)
+{
+    .what-we-do
+    {
+        margin-top:1.5em;
     }
 }
 
