--- a/assets/css/beta.css
+++ b/assets/css/beta.css
@@ -29,6 +29,8 @@
   overflow : hidden;
   margin-bottom : 30px;
   width : 100%;
+  height:250px;
+  background-size:cover !important;
   text-align : right;
   transition : all 0.3s ease-in;
 
@@ -44,10 +46,10 @@
 }
 
 .galleryImageTitle{
-  position : absolute;
+  position : relative;
   z-index : 10;
   float : right;
-  margin-top : 200px;
+  margin-top : 180px;
   padding : 4%;
   width : 92%;
     color : rgba(255,255,255,0.6);
