--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -45,13 +45,13 @@
 
     #contact
     {
+        overflow-y:none;
         height:300px;
-        overflow-y:none;
     }
 
     .marketingPhone li{
+        margin-top:-10px;
         margin-bottom:36px;
-        margin-top:-10px;
     }
 
     .contact-us
@@ -88,14 +88,14 @@
     }
 
     .marketingPhone li{
+        margin-top:-10px;
         margin-bottom:36px;
-        margin-top:-10px;
     }
 
     #contact
     {
+        overflow:none;
         height:350px !important;
-        overflow:none;
     }
 
     .contact-us
@@ -124,6 +124,10 @@ body
     height: 100%;
     height: 100%;
     background-color: transparent;
+}
+
+.parallax-buskwak{
+  background-color : #333;
 }
 
 .transparentClass{
@@ -173,11 +177,12 @@ body
 }
 
 .wi-navigation-center{
+  overflow:hidden;
+  padding-top:3em;
+  padding-left:0;
   width : 100%;
   text-align : center;
-  padding-left:0;
-  padding-top:3em;
-  overflow:hidden;
+
   flex-wrap: wrap ;
   justify-content: space-around;
 }
@@ -194,6 +199,7 @@ body
 .wrapper
 {
   display: flex;
+
   align-items: center;
   justify-content: center;
 }
@@ -223,8 +229,8 @@ text-decoration: none;
 }
 
 .wi-navigation-left {
+  margin-top:3px;
   padding-left : 0px;
-  margin-top:3px;
 }
 
 .wi-navigation-left li
@@ -324,13 +330,13 @@ text-decoration: none;
 
 .wi-logo
 {
+    padding-top:10px;
     width: 220px;
     height: 42px;
     background-image: url('../images/logotext.png');
     background-position-y: 16px;
     background-size: 220px;
     background-repeat: no-repeat;
-    padding-top:10px;
 }
 
 
@@ -533,29 +539,30 @@ font-size : 18px;
 }
 
 .contact-name{position : relative;
+width:80%
   font-weight : 600;
   font-size : 120%;
-width:80%
 }
 .marketingPhone{
   margin-left : 0px;
   padding-left : 0px;
-  list-style : none;
   width:100%;
+  list-style : none;
 }
 
 .breakword
 {
-    overflow-wrap: break-word;
+    white-space: normal;
   word-wrap: break-word;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
   -webkit-hyphens: auto;
+  -moz-hyphens: auto;
   hyphens: auto;
-    white-space: normal;
+
+    overflow-wrap: break-word;
+  -ms-hyphens: auto;
 }
 
 .contact-profile-picture img{position : relative;
@@ -573,8 +580,8 @@ width:80%
 
 #contact
 {
+    overflow:none;
     height:350px !important;
-    overflow:none;
 }
 
 .contact-form input[type="text"]{
