--- a/assets/css/alpha.css
+++ b/assets/css/alpha.css
@@ -116,6 +116,7 @@
     }
 }
 
+
 html
 {
     margin: 0;
@@ -133,6 +134,15 @@ body
 .parallax-buskwak{
   background-color : #333;
 }
+
+.whatwedoImage
+{
+    position:relative;
+    height:150px;
+    width:100%;
+    background-size: cover !important;
+}
+
 
 .transparentClass{
   opacity: 0;
